--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section class="home" id="Home">
             <div class="home-content">
                 
-                <h3>Hello, It's Me</h3>
-                <h1>MIDHUN V S</h1>
-                <h4 style="--i:6">I'm a Engineering student who is<br>
+                <h3>Hey There, It's Me</h3>
+                <h1>Omkar Singh</h1>
+                <h4 style="--i:6">An Engineer; who is<br>
                     passionate in <span class="text"></span></h4>
                 
                 <div class="img">
@@ -39,12 +39,11 @@
                 </div>
 
                 <div class="home-sci">
-                    <a href="https://www.linkedin.com/in/midhun-v-s"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://instagram.com/midhun_021"style="--i:8" target="_blank"><i class='bx bxl-instagram' ></i></a>
-                    <a href="https://www.youtube.com/@Unlucky_Coder21"style="--i:9" target="_blank"><i class='bx bxl-youtube'></i></a>
-                    <a href="https://github.com/vsmidhun21"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.linkedin.com/in/omkarsingh111196/"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.instagram.com/rajput_omkar.singh?igsh=dXp2bGRwN3BnMWdw"style="--i:8" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://github.com/omkar111196/"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/18UQSFzY9kdABAWTxDMgy_uBmery6-2q_/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1hJa5Kf9AdcF-jnOAX2Z6MPvHSIOPZCcm/view?usp=drive_link" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
@@ -56,11 +55,10 @@
                 </div>
                 <div class="about-text">
                     <h2>About <span>Me</span></h2>
-                    <p>I'm a Smart working engineering student specialized in Electronics and Communication Engineering.
-                        Along with my degree, I completed Python, SQL, Java, Cybersecurity courses and various technologies.
-                        I learnt has helped me develop a project called "Drowsiness Detection & Alerting System".
-                        It was during this project that I discovered that I am a team player.
-                        I am currently seeking roles where I can utilize my experience and skill.<br>
+                    <p>An Aspiring Engineer, passionate about the power of technology and design to create meaningful solutions and make a meaningful impact on 
+                        society. Having a Bachelors degree in Electronics and Telecommunication with 8.79 CGPA, interested in Communication protocols, 
+                        Android Development, Machine Learning and much more. Worked as a Lead coordinator and managed teams in many Technical and Non-technical 
+                        college campus as well as non-campus events. An Endurance Training Enthusiast and a passionate runner. Besides, also a nature lover and tree planter.  <br>
                         <br>
                         <a href="https://drive.google.com/file/d/18UQSFzY9kdABAWTxDMgy_uBmery6-2q_/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
