--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ADITYA BHOI | FULL STACK WEB DEVELOPER</title>
+  <title>OMKAR SINGH | ANDROID DEVELOPER</title>
   <link rel="shortcut icon" href="https://img.icons8.com/office/80/000000/person-female-skin-type-1-2.png" type="image/x-icon">
   <!-- ===== CSS Files ===== -->
   <link rel="stylesheet" href="css/style.css">
@@ -60,17 +60,9 @@ emailjs.init("yInfKq3RKqNrQCrdU");
         <div class="container">
           <div class="row" id="heroimgrevv">
             <div class="home-info padd-15">
-              <h3 class="hello">Hello, my name is <br/> <span class="name">Aditya Bhoi</span></h3>
-              <h3 class="my-profession">I' m a <span class="typing"></span></h3>
-              <div class="introdu">Passionate Full
-                Stack Web Developer with a
-                specialization in Front-end.
-                Skilled, collaborative and
-                attentive developer with a drive
-                to develop the most relevant
-                products. Always looking
-                forward to learning something
-                new to strengthen skills learned.
+              <h3 class="hello">Hey There, I'm <br/> <span class="name">Omkar Singh</span></h3>
+              <h3 class="my-profession">An <span class="typing"></span></h3>
+              <div class="introdu">
                 </div>
                 <div class="home__icon_cont">
                   <a href="https://github.com/AdityaBhoi0404" target="_blank"><div class="icon"><i class="fab fa-github"></i></div></a>
