--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
             <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/638/295/png-transparent-android-software-development-logo-android-text-grass-desktop-wallpaper.png"/>
+                  <img src="https://w7.pngwing.com/pngs/638/295/png-transparent-android-software-development-logo-android-text-grass-desktop-wallpaper.png height="48px""/>
                 </div>
                 <h4>Android</h4>
               </div>
@@ -187,7 +187,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://i.pinimg.com/originals/e8/54/44/e8544455f56ab1d668521bead398f84a.png"/>
+                  <img src="https://i.pinimg.com/originals/e8/54/44/e8544455f56ab1d668521bead398f84a.png" height="48px" height="48px"/>
                 </div>
                 <h4>Machine Learning</h4>
               </div>
@@ -197,7 +197,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/578/816/png-transparent-java-class-file-java-platform-standard-edition-java-development-kit-java-runtime-environment-coffee-jar-text-class-orange-thumbnail.png"/>
+                  <img src="https://w7.pngwing.com/pngs/578/816/png-transparent-java-class-file-java-platform-standard-edition-java-development-kit-java-runtime-environment-coffee-jar-text-class-orange-thumbnail.png" height="48px"/>
                 </div>
                 <h4>Java</h4>
               </div>
@@ -207,7 +207,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/234/329/png-transparent-python-logo-thumbnail.png"/>
+                  <img src="https://w7.pngwing.com/pngs/234/329/png-transparent-python-logo-thumbnail.png" height="48px"/>
                 </div>
                 <h4>Python</h4>
               </div>
@@ -228,7 +228,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://e7.pngegg.com/pngimages/689/806/png-clipart-database-management-system-computer-icons-relational-model-bases-de-datos-angle-data.png"/>
+                  <img src="https://e7.pngegg.com/pngimages/689/806/png-clipart-database-management-system-computer-icons-relational-model-bases-de-datos-angle-data.png" height="48px"/>
                 </div>
                 <h4>DBMS</h4>
               </div>
