--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
                   <a href="https://github.com/omkar111196" target="_blank"><div class="icon"><i class="fab fa-github"></i></div></a>
                   <a href="https://www.linkedin.com/in/omkarsingh111196/" target="_blank"><div class="icon"><i class="fab fa-linkedin"></i></div></a>
                   <a href="https://wa.me/9552902054" target="_blank"><div class="icon"><i class="fab fa-whatsapp"></i></div></a>
-                  <a href="https://x.com/im_ommiee289?t=qEg0EK56GMr8MpTJMxflyQ&s=08" target="_blank"><div class="icon"><i class="fab fa-X"></i></div></a>
+                  <a href="https://x.com/im_ommiee289?t=qEg0EK56GMr8MpTJMxflyQ&s=08" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div></a>
                   <a href="https://www.instagram.com/rajput_omkar.singh?igsh=dXp2bGRwN3BnMWdw" target="_blank"><div class="icon"><i class="fab fa-instagram"></i></div></a>
                 
                 </div>
