--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
             <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/638/295/png-transparent-android-software-development-logo-android-text-grass-desktop-wallpaper.png height="48px""/>
+                  <img src="https://w7.pngwing.com/pngs/638/295/png-transparent-android-software-development-logo-android-text-grass-desktop-wallpaper.png" height="48px""/>
                 </div>
                 <h4>Android</h4>
               </div>
@@ -291,6 +291,13 @@ emailjs.init("yInfKq3RKqNrQCrdU");
               <h4>Instagram</h4>
               <p>rajput_omkar.singh</p></a>
             </div>
+
+             <div class="contact-info-item padd-15">
+              <a href="https://x.com/im_ommiee289?t=qEg0EK56GMr8MpTJMxflyQ&s=08" target="_blank"><div class="icon"><i class="fa fa-twitter"></i></div>
+              <h4>X</h4>
+              <p>Omkar Singh</p></a>
+            </div>
+            
             <!-- ===== Contact info item end ====== -->
              <!-- ===== Contact info item start ====== -->
              <div class="contact-info-item padd-15">
