--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
             </div>
 
              <div class="contact-info-item padd-15">
-              <a href="https://x.com/im_ommiee289?t=qEg0EK56GMr8MpTJMxflyQ&s=08" target="_blank"><div class="icon"><i class="fa fa-twitter"></i></div>
+              <a href="https://x.com/im_ommiee289?t=qEg0EK56GMr8MpTJMxflyQ&s=08" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div>
               <h4>X</h4>
               <p>Omkar Singh</p></a>
             </div>
