--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OMKAR SINGH | ANDROID DEVELOPER</title>
-  <link rel="shortcut icon" href="https://img.icons8.com/office/80/000000/person-female-skin-type-1-2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/doodle/48/portfolio.png" alt="portfolio"/>" type="image/x-icon">
   <!-- ===== CSS Files ===== -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
