--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
                   <a href="https://www.instagram.com/rajput_omkar.singh?igsh=dXp2bGRwN3BnMWdw" target="_blank"><div class="icon"><i class="fab fa-instagram"></i></div></a>
                 
                 </div>
-              <a href="./Resume/Resume__OmkarSingh.pdf" download="Aditya Bhoi Resume" class="btn">Download CV</a>
+              <a href="./Resume/Resume__OmkarSingh.pdf" download="Omkar Singh Resume" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
               <img src="images/photo1.jpg" alt="mypic">
