--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
               <a href="./Resume/Resume__OmkarSingh.pdf" download="Omkar Singh Resume" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
-              <img src="images/photo1.jpg" alt="mypic">
+              <img src="images/photo1.png" alt="mypic">
             </div>
           </div>
         </div>
