--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
             <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/638/295/png-transparent-android-software-development-logo-android-text-grass-desktop-wallpaper.png" height="48px""/>
+                  <img width="100" height="100" src="https://img.icons8.com/doodle/48/android-os.png" alt="android-os"/>
                 </div>
                 <h4>Android</h4>
               </div>
@@ -187,8 +187,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://i.pinimg.com/originals/e8/54/44/e8544455f56ab1d668521bead398f84a.png" height="48px" height="48px"/>
-                </div>
+                  <img width="100" height="100" src="https://img.icons8.com/ios/50/artificial-intelligence.png" alt="artificial-intelligence"/></div>
                 <h4>Machine Learning</h4>
               </div>
             </div>
@@ -197,8 +196,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/578/816/png-transparent-java-class-file-java-platform-standard-edition-java-development-kit-java-runtime-environment-coffee-jar-text-class-orange-thumbnail.png" height="48px"/>
-                </div>
+                <img width="100" height="100" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/>  </div>
                 <h4>Java</h4>
               </div>
             </div>
@@ -207,8 +205,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://w7.pngwing.com/pngs/234/329/png-transparent-python-logo-thumbnail.png" height="48px"/>
-                </div>
+                  <img width="100" height="100" src="https://img.icons8.com/clouds/100/python.png" alt="python"/> </div>
                 <h4>Python</h4>
               </div>
             </div>
@@ -217,8 +214,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
               <div class="service-item padd-15">
                 <div class="service-item-inner">
                   <div class="">
-                    <img src="https://png.pngtree.com/png-clipart/20200701/original/pngtree-flat-blue-technology-chip-png-image_5401726.jpg"
-                    height="48px"/>
+                    <img width="100" height="100" src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/external-embedded-web-development-flaticons-lineal-color-flat-icons.png" alt="external-embedded-web-development-flaticons-lineal-color-flat-icons"/>
                   </div>
                   <h4>Embedded Systems</h4>
                 </div>
@@ -228,8 +224,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
              <div class="service-item padd-15">
               <div class="service-item-inner">
                 <div class="">
-                  <img src="https://e7.pngegg.com/pngimages/689/806/png-clipart-database-management-system-computer-icons-relational-model-bases-de-datos-angle-data.png" height="48px"/>
-                </div>
+                  <img width="100" height="100" src="https://img.icons8.com/fluency/48/database--v1.png" alt="database--v1"/> </div>
                 <h4>DBMS</h4>
               </div>
             </div>
